--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,14 @@
 
 html,
 body {
-  background: #222222;
+  background-color: white;
+}
+
+@media (prefers-color-scheme: dark) {
+  html,
+  body {
+    background-color: #222222;
+  }
 }
 
 .option {
